fixing size and align

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -81,8 +81,9 @@ p {
     }
     .contact-list {
         .fas, .fab {
-            margin-right: 5px;
-            font-size: 18px;
+            text-align: center;
+	    margin-right: 5px;
+            font-size: 25px;
             vertical-align: middle;
         }
         li {
